--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,8 +25,11 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <title>React App</title>
+  <title>Luv 2 Read</title>
 </head>
+
+<!-- Stripe -->
+<script src="https://js.stripe.com/v3" async></script>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
